--- a/apps/netbird/config.json
+++ b/apps/netbird/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "NetBird",
+  "name": "NetBird+",
   "available": true,
   "exposable": false,
   "dynamic_config": true,
