--- a/apps/backrest/docker-compose.yml
+++ b/apps/backrest/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - XDG_CACHE_HOME=${XDG_CACHE_HOME-/cache}
       - TMPDIR=${TMPDIR-/tmp}
       - BACKREST_RESTIC_COMMAND=${BACKREST_RESTIC_COMMAND}
-      - TZ=${TZ-Europe/London}
+      - TZ=${TZ-Europe/Prague}
     volumes:
       - ${APP_DATA_DIR}/data/data:/data
       - ${APP_DATA_DIR}/data/config:/config
