--- a/apps/backrest/docker-compose.yml
+++ b/apps/backrest/docker-compose.yml
@@ -4,14 +4,15 @@ services:
     container_name: backrest
     hostname: backrest
     environment:
-      - PUID=${BACKREST_PUID-1000}
-      - PGID=${BACKREST_PGID-1000}
+      - PUID=${PUID-1000}
+      - PGID=${PGID-1000}
+      - TZ=${TZ-Europe/Prague}
+      - BACKREST_PORT=${BACKREST_PORT-0.0.0.0:9898}
       - BACKREST_DATA=${BACKREST_DATA-/data}
       - BACKREST_CONFIG=${BACKREST_CONFIG-/config/config.json}
       - XDG_CACHE_HOME=${XDG_CACHE_HOME-/cache}
       - TMPDIR=${TMPDIR-/tmp}
       - BACKREST_RESTIC_COMMAND=${BACKREST_RESTIC_COMMAND}
-      - TZ=${TZ-Europe/Prague}
     volumes:
       - ${APP_DATA_DIR}/data/data:/data
       - ${APP_DATA_DIR}/data/config:/config
