--- a/apps/backrest/docker-compose.yml
+++ b/apps/backrest/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       - PUID=${PUID-1000}
       - PGID=${PGID-1000}
-      - TZ=America/Los_Angeles
+      - TZ=${TZ-Europe/Prague}
       - BACKREST_PORT=${BACKREST_PORT-0.0.0.0:9898}
       - BACKREST_DATA=${BACKREST_DATA-/data}
       - BACKREST_CONFIG=${BACKREST_CONFIG-/config/config.json}
@@ -20,8 +20,6 @@ services:
       - ${APP_DATA_DIR}/data/tmp:/tmp
       - ${APP_DATA_DIR}/data/userdata:/userdata
       - ${APP_DATA_DIR}/data/repos:/repos
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/timezone:/etc/timezone:ro
     networks:
       - tipi_main_network
     ports:
