--- a/apps/kopia/config.json
+++ b/apps/kopia/config.json
@@ -9,42 +9,42 @@
   "tipi_version": 1,
   "version": "latest",
   "categories": ["utilities", "data"],
-  "description": "Fast and secure open-source backup/restore tool with encryption, deduplication, and compression. Supports multiple storage backends with web-based GUI.",
-  "short_desc": "Encrypted, deduplicated backup solution with web interface.",
+  "description": "Fast, secure, open-source backup/restore tool with Web UI. All repo creation and policies are done in the Web UI.",
+  "short_desc": "Encrypted, deduplicated backup solution with Web UI.",
   "author": "Kopia Project",
   "source": "https://github.com/kopia/kopia",
   "form_fields": [
     {
       "type": "number",
-      "label": "Container > UserID (UID)",
+      "label": "Container ▶ UserID (UID)",
       "placeholder": "1000",
       "env_variable": "KOPIA_PUID",
       "default": 1000
     },
     {
       "type": "number",
-      "label": "Container > GroupID (PGID)",
+      "label": "Container ▶ GroupID (PGID)",
       "placeholder": "1000",
       "env_variable": "KOPIA_PGID",
       "default": 1000
     },
     {
       "type": "text",
-      "label": "Server > Timezone",
+      "label": "Server ▶ Timezone",
       "placeholder": "Europe/Prague",
       "env_variable": "TZ",
       "default": "Europe/Prague"
     },
     {
       "type": "password",
-      "label": "Repository > Master Password",
+      "label": "Repository ▶ Master Password",
       "required": true,
-      "placeholder": "Strong password for repository encryption",
+      "placeholder": "Strong passphrase for repository encryption",
       "env_variable": "KOPIA_PASSWORD"
     },
     {
       "type": "text",
-      "label": "Server > Username",
+      "label": "Server ▶ Username",
       "required": true,
       "placeholder": "admin",
       "env_variable": "KOPIA_SERVER_USERNAME",
@@ -52,223 +52,50 @@
     },
     {
       "type": "password",
-      "label": "Server > Password",
+      "label": "Server ▶ Password",
       "required": true,
-      "placeholder": "Password for web interface access",
+      "placeholder": "Web UI login password",
       "env_variable": "KOPIA_SERVER_PASSWORD"
     },
     {
       "type": "text",
-      "label": "Server > Hostname",
+      "label": "Server ▶ Hostname",
       "placeholder": "kopia-server",
       "env_variable": "KOPIA_HOSTNAME",
       "default": "kopia-server"
     },
     {
       "type": "boolean",
-      "label": "Security > Disable CSRF Token Checks",
-      "env_variable": "KOPIA_DISABLE_CSRF",
-      "default": false
-    },
-    {
-      "type": "boolean",
-      "label": "Security > Enable TLS/HTTPS",
+      "label": "Security ▶ Enable TLS/HTTPS",
       "env_variable": "KOPIA_ENABLE_TLS",
       "default": false
     },
     {
       "type": "text",
-      "label": "TLS > Certificate File Path",
+      "label": "TLS ▶ Certificate File Path",
       "placeholder": "/app/config/server.crt",
       "env_variable": "KOPIA_TLS_CERT_FILE",
       "default": ""
     },
     {
       "type": "text",
-      "label": "TLS > Private Key File Path",
+      "label": "TLS ▶ Private Key File Path",
       "placeholder": "/app/config/server.key",
       "env_variable": "KOPIA_TLS_KEY_FILE",
       "default": ""
     },
     {
       "type": "boolean",
-      "label": "Logging > Enable Debug Mode",
+      "label": "Logging ▶ Enable Debug Mode",
       "env_variable": "KOPIA_LOG_DEBUG",
       "default": false
     },
     {
       "type": "text",
-      "label": "Repository > Default Compression",
-      "placeholder": "zstd",
-      "options": [
-        { "label": "None", "value": "none" },
-        { "label": "GZIP", "value": "gzip" },
-        { "label": "ZSTD (Recommended)", "value": "zstd" },
-        { "label": "LZ4", "value": "lz4" },
-        { "label": "Deflate", "value": "deflate" }
-      ],
-      "env_variable": "KOPIA_DEFAULT_COMPRESSION",
-      "default": "zstd"
-    },
-    {
-      "type": "boolean",
-      "label": "Repository > Auto-maintenance",
-      "env_variable": "KOPIA_AUTO_MAINTENANCE",
-      "default": true
-    },
-    {
-      "type": "text",
-      "label": "Backup > Data Directory to Mount",
+      "label": "Backup ▶ Data Directory to Mount",
       "placeholder": "/data",
       "env_variable": "KOPIA_DATA_PATH",
       "default": "/"
-    },
-    {
-      "type": "text",
-      "label": "Repository > Type",
-      "options": [
-        { "label": "Local Filesystem", "value": "filesystem" },
-        { "label": "Amazon S3", "value": "s3" },
-        { "label": "Google Cloud Storage", "value": "gcs" },
-        { "label": "Azure Blob Storage", "value": "azure" },
-        { "label": "Backblaze B2", "value": "b2" },
-        { "label": "SFTP", "value": "sftp" },
-        { "label": "WebDAV", "value": "webdav" }
-      ],
-      "env_variable": "KOPIA_REPO_TYPE",
-      "default": "filesystem"
-    },
-
-    {
-      "type": "text",
-      "label": "S3 > Bucket",
-      "placeholder": "my-s3-bucket",
-      "env_variable": "KOPIA_S3_BUCKET",
-      "default": ""
-    },
-    {
-      "type": "text",
-      "label": "S3 > Prefix",
-      "placeholder": "kopia/repo/",
-      "env_variable": "KOPIA_S3_PREFIX",
-      "default": ""
-    },
-    {
-      "type": "text",
-      "label": "S3 > Region",
-      "placeholder": "us-east-1",
-      "env_variable": "KOPIA_S3_REGION",
-      "default": ""
-    },
-
-    {
-      "type": "text",
-      "label": "GCS > Bucket",
-      "placeholder": "my-gcs-bucket",
-      "env_variable": "KOPIA_GCS_BUCKET",
-      "default": ""
-    },
-    {
-      "type": "text",
-      "label": "GCS > Prefix",
-      "placeholder": "kopia/repo/",
-      "env_variable": "KOPIA_GCS_PREFIX",
-      "default": ""
-    },
-
-    {
-      "type": "text",
-      "label": "Azure > Account Name",
-      "placeholder": "myazureaccount",
-      "env_variable": "KOPIA_AZURE_ACCOUNT",
-      "default": ""
-    },
-    {
-      "type": "text",
-      "label": "Azure > Container Name",
-      "placeholder": "kopia-backups",
-      "env_variable": "KOPIA_AZURE_CONTAINER",
-      "default": ""
-    },
-
-    {
-      "type": "text",
-      "label": "Backblaze B2 > Bucket",
-      "placeholder": "my-b2-bucket",
-      "env_variable": "KOPIA_B2_BUCKET",
-      "default": ""
-    },
-    {
-      "type": "text",
-      "label": "Backblaze B2 > Prefix",
-      "placeholder": "kopia/repo/",
-      "env_variable": "KOPIA_B2_PREFIX",
-      "default": ""
-    },
-
-    {
-      "type": "text",
-      "label": "SFTP > Host",
-      "placeholder": "sftp.example.com",
-      "env_variable": "KOPIA_SFTP_HOST",
-      "default": ""
-    },
-    {
-      "type": "number",
-      "label": "SFTP > Port",
-      "placeholder": "22",
-      "env_variable": "KOPIA_SFTP_PORT",
-      "default": 22
-    },
-    {
-      "type": "text",
-      "label": "SFTP > Username",
-      "placeholder": "sftpuser",
-      "env_variable": "KOPIA_SFTP_USER",
-      "default": ""
-    },
-    {
-      "type": "text",
-      "label": "SFTP > SSH Key File Path",
-      "placeholder": "/app/config/id_rsa",
-      "env_variable": "KOPIA_SFTP_KEYFILE",
-      "default": ""
-    },
-    {
-      "type": "text",
-      "label": "SFTP > Remote Path",
-      "placeholder": "/home/sftpuser/kopia",
-      "env_variable": "KOPIA_SFTP_PATH",
-      "default": ""
-    },
-
-    {
-      "type": "text",
-      "label": "WebDAV > URL",
-      "placeholder": "https://nas.example.com/remote.php/webdav/kopia",
-      "env_variable": "KOPIA_WEBDAV_URL",
-      "default": ""
-    },
-    {
-      "type": "text",
-      "label": "WebDAV > Username",
-      "placeholder": "webdavuser",
-      "env_variable": "KOPIA_WEBDAV_USER",
-      "default": ""
-    },
-    {
-      "type": "password",
-      "label": "WebDAV > Password",
-      "placeholder": "WebDAV password",
-      "env_variable": "KOPIA_WEBDAV_PASSWORD",
-      "default": ""
-    },
-    {
-      "type": "text",
-      "label": "WebDAV > Path",
-      "placeholder": "/remote.php/webdav/kopia",
-      "env_variable": "KOPIA_WEBDAV_PATH",
-      "default": ""
     }
   ],
   "supported_architectures": ["arm64", "amd64"],
